test/classes/delete-free/lifetimes/borrow-from-new-linkedlist.good
borrow-from-new-linkedlist.chpl:5: In function 'main':
borrow-from-new-linkedlist.chpl:6: warning: Class created by nested 'new' will be deinitialized before the borrow can be used. Please update this code to use a separate variable to store the new class
borrow-from-new-linkedlist.chpl:6: warning: Class created by nested 'new' will be deinitialized before the borrow can be used. Please update this code to use a separate variable to store the new class
borrow-from-new-linkedlist.chpl:6: error: Scoped variable would outlive the value it is set to
