test/classes/delete-free/lifetimes/borrow-from-new-linkedlist.future
bug: problem with lifetime checking with LinkedLists
#22629 
